feat: add tags query+page

--- a/src/posts/hello-mdx.mdx
+++ b/src/posts/hello-mdx.mdx
@@ -1,3 +1,16 @@
+import Tag from "../components/community/tag.tsx";
+
+---
+title: "MDX Post"
+date: "2020-03-30"
+thumbnail: "https://placekitten.com/220/160"
+headerImage: "https://placekitten.com/1000/450"
+author: "Kay"
+tags:
+  - Tag
+  - Components
+---
+
 ## Hello
 
 MDX Paragraphs are _so_ fun.
@@ -5,3 +18,5 @@ MDX Paragraphs are _so_ fun.
 - These 
 - Are
 - List Items
+
+<Tag label="List Items" />
