feat: authors and posts

--- a/src/posts/hello-mdx.mdx
+++ b/src/posts/hello-mdx.mdx
@@ -3,7 +3,7 @@ title: "MDX Post"
 date: "2020-03-30"
 thumbnail: "https://placekitten.com/220/160"
 headerImage: "https://placekitten.com/1000/450"
-author: "Kay"
+author: "kay"
 tags:
   - Tag
   - Components
